adjustments to the resume user service